src/objects/LoggerSObjectHandlerPluginParameter__mdt.object
<CustomObject>
    <description>Used to store additional key-value pair parameters that can be used by Logger plugins</description>
    <fields>
        <fullName>CollectionType__c</fullName>
        <description>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</description>
        <inlineHelpText>The expected collection type of the parameter. For example, String vs List&lt;String&gt;</inlineHelpText>
        <label>Collection Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                    <default>true</default>
                    <label>Single</label>
                </value>
                <value>
                    <fullName>List</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataType__c</fullName>
        <description>The expected data type of the parameter value</description>
        <inlineHelpText>The expected data type of the parameter value</inlineHelpText>
        <label>Data Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Id</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>Long</fullName>
                </value>
                <value>
                    <fullName>Object</fullName>
                </value>
                <value>
                    <fullName>SObject</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Used purely for documentation purposes to store any important details about this plugin</description>
        <inlineHelpText>Used purely for documentation purposes to store any important details about this plugin</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsEnabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Controls if the plugin parameter is enabled/disabled. Only enabled plugin parameters will be used by the Apex plugin framework.</description>
        <inlineHelpText>Controls if the plugin parameter is enabled/disabled. Only enabled plugin parameters will be used by the Apex plugin framework.</inlineHelpText>
        <label>Is Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SObjectHandlerPlugin__c</fullName>
        <description>The configured plugin that uses this parameter</description>
        <inlineHelpText>The configured plugin that uses this parameter</inlineHelpText>
        <label>Logger Plugin</label>
        <referenceTo>LoggerSObjectHandlerPlugin__mdt</referenceTo>
        <relationshipLabel>Logger Plugin Parameters</relationshipLabel>
        <relationshipName>LoggerSObjectHandlerPluginParameters</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The value used by the plugin for this parameter. Since custom metadata type (CMDT) records can be deployed between orgs, you can either:
 - Deploy the CMDT records between your orgs - for parameters that should be consistent in all environments
 - Manually configure the CMDT records in each org - for parameters that should be environment-specific</description>
        <inlineHelpText>The value used by the plugin for this parameter. Since custom metadata type (CMDT) records can be deployed between orgs, you can either:
 - Deploy the CMDT records between your orgs - for parameters that should be consistent in all environments
 - Manually configure the CMDT records in each org - for parameters that should be environment-specific</inlineHelpText>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Logger Plugin Parameter</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandlerPlugin__c</columns>
        <columns>IsEnabled__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDisabled</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandlerPlugin__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsEnabled__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Disabled</label>
    </listViews>
    <listViews>
        <fullName>AllEnabled</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>SObjectHandlerPlugin__c</columns>
        <columns>CollectionType__c</columns>
        <columns>DataType__c</columns>
        <columns>Value__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsEnabled__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Enabled</label>
    </listViews>
    <pluralLabel>Logger Plugin Parameters</pluralLabel>
</CustomObject>